@@ -38,6 +38,7 @@ ___
 * add BindingInfo servlet to web.xml
 * OAuth2 configuration in shiro.ini: OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri
 * wrq filter operator like automatically escapes %, _ and \ now. Don't use local workarounds where you add \ yourself.
+* bcdui.config.userName now holds the value from bcdui_sec_user.name not user_login anymore
 
 ___
 ==== Release 5_6_0
